--- a/public/judgment-name-with-ncn/v2-0/assets/main.css
+++ b/public/judgment-name-with-ncn/v2-0/assets/main.css
@@ -2356,7 +2356,7 @@ a:visited {
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
-  gap: 1rem;  /* reduced from 2rem */
+  gap: 0.2rem;  /* reduced from 2rem */
 }
 
 @media (min-width: 576px) {
@@ -2371,24 +2371,36 @@ a:visited {
     text-align: center;
     display: block;
     padding: 0.25rem 1rem;
+         /* extra declaration  */
+         min-width: 90%; 
   }
 }
 
 @media (min-width: 576px) {
   .judgment-toolbar__container {
     text-align: right;
+    /* extra declaration  */
+    max-width: 90%;
   }
 }
 
 @media (min-width: 768px) {
   .judgment-toolbar__container {
-    max-width: 40rem;
+    max-width: 55rem;
   }
 }
 
 @media (min-width: 768px) {
   .judgment-toolbar__container {
-    max-width: 46rem;
+    max-width: 55rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .judgment-toolbar__container {
+    min-width: 90%;
+    flex-direction: column; 
+
   }
 }
 
@@ -2441,7 +2453,6 @@ a:visited {
 @media (min-width: 576px) {
   .judgment-toolbar-download {
     margin-left: auto;
-    margin-right: 0;
   }
 }
 
